--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "babel-preset-react": "^6.24.1",
     "bulma": "^0.6.2",
     "font-awesome": "^4.7.0",
+    "marked": "^0.3.17",
     "node-sass": "^4.7.2",
     "qs": "^6.5.1",
     "react": "^16.2.0",
